finalizada a documentação das rotas usando o swagger
